[package]
name = "hurl"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4.5.20", features = ["derive"] }
serde = { version = "1.0.210", features = ["derive"] }
hyper = { version = "1.4.1", features = ["client", "http1", "http2"] }
hyper-util = { version = "0.1.15", features = ["tokio"] }
tokio-native-tls = "0.3"  # For TLS support
serde_json = "1.0.132"
colored = "3"
ratatui = "0.29.0"
crossterm = "0.29"
anyhow = "1.0.89"
async-trait = "0.1.88"
http-body-util = "0.1"
http = "1.3.1"
futures = "0.3.31"
mockall = "0.13.1"
